chore: added some variables of colors

--- a/src/variables.css
+++ b/src/variables.css
@@ -1,4 +1,6 @@
 :root {
   --primary-color: #a698e1;
   --secondary-color: #ecdbec;
+  --tertiary-color: #b6b1e9;
+  --quaternary-color: #6055d7;
 }
