--- a/src/pages/Signin/Signin.module.css
+++ b/src/pages/Signin/Signin.module.css
@@ -1,19 +1,18 @@
-.signup {
-  height: 100vh;
+.signin {
   width: 100%;
   background-color: var(--secondary-color);
   position: relative;
   z-index: 10;
 }
 
-.signup__container {
+.signin__container {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  padding: 55px 20px;
+  height: 100vh;
 }
 
-.signup__img-decor {
+.signin__img-decor {
   position: absolute;
   z-index: -1;
   top: 0;
@@ -22,7 +21,7 @@
   object-fit: cover;
 }
 
-.signup__img {
+.signin__img {
   width: 100%;
   height: 450px;
 }
