--- a/src/pages/Signin/Signin.module.css
+++ b/src/pages/Signin/Signin.module.css
@@ -9,7 +9,7 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .signin__img-decor {
@@ -24,4 +24,13 @@
 .signin__img {
   width: 100%;
   height: 450px;
+}
+
+@media screen and (max-width: 846px) {
+  .signin__container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px 0;
+  }
 }
