feat: added adaptibility for 562px

--- a/src/components/layout/Header/Header.css
+++ b/src/components/layout/Header/Header.css
@@ -35,3 +35,9 @@
   color: #272727;
   margin-right: 30px;
 }
+
+@media screen and (max-width: 562px) {
+  .header__user-username {
+    display: none;
+  }
+}
