feat: added adaptability

--- a/src/pages/Lesson/LessonDetails/LessonDetails.module.css
+++ b/src/pages/Lesson/LessonDetails/LessonDetails.module.css
@@ -7,8 +7,8 @@
 .lesson__description {
   font-size: 20px;
   font-family: "Inter", sans-serif;
-  inline-size: 700px;
-  white-space: pre-line;
+  max-width: 700px;
+  white-space: pre-wrap;
 }
 
 .lesson__details-wrapper {
@@ -28,4 +28,20 @@
   display: flex;
   justify-content: flex-end;
   margin-top: 50px;
+}
+
+@media screen and (max-width: 768px) {
+  .lesson__button-wrapper {
+    justify-content: center;
+  }
+}
+
+@media screen and (max-width: 578px) {
+  .lesson__details-wrapper {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .lesson__description {
+    text-align: center;
+  }
 }
