--- a/src/pages/Lesson/Lesson.module.css
+++ b/src/pages/Lesson/Lesson.module.css
@@ -1,5 +1,5 @@
 .wrapper {
-  height: 100vh;
+  min-height: 100vh;
   background-color: var(--secondary-color);
 }
 
@@ -19,4 +19,20 @@
   width: 100%;
   height: 350px;
   margin-top: 20px;
+}
+
+.lesson__button-wrapper {
+  margin-left: auto;
+}
+
+@media screen and (max-width: 912px) {
+  .wrapper {
+    min-height: 130vh;
+  }
+
+  .lesson__container {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+  }
 }
