--- a/src/pages/Signin/LoginForm.module.css
+++ b/src/pages/Signin/LoginForm.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
-  height: 600px;
+  min-height: 600px;
   width: 400px;
   border-radius: 40px;
   background-color: var(--quaternary-color);
@@ -23,4 +23,10 @@
   color: #ffffff;
   text-decoration: underline;
   margin-left: 5px;
+}
+
+@media screen and (max-width: 448px) {
+  .form__wrapper {
+    width: 350px;
+  }
 }
