--- a/src/pages/Signup/SignupForm.module.css
+++ b/src/pages/Signup/SignupForm.module.css
@@ -13,3 +13,9 @@
   font-family: "Inter", sans-serif;
   color: #ffffff;
 }
+
+@media screen and (max-width: 412px) {
+  .form__wrapper {
+    width: 350px;
+  }
+}
