feat: added features

--- a/src/components/layout/Header/Header.css
+++ b/src/components/layout/Header/Header.css
@@ -31,7 +31,7 @@
 }
 
 .header__user-username {
-  font-family: "Poppins", sans-serif;
+  font-family: "Inter", sans-serif;
   color: #272727;
   margin-right: 30px;
 }
